[gd_scene load_steps=5 format=3 uid="uid://cm4jsnjutjfu6"]

[ext_resource type="Texture2D" uid="uid://p871kcr0eyx6" path="res://Graphics/SOUVUTU0.png" id="1_1suy0"]
[ext_resource type="Script" path="res://Scripts/Battle/CombatantNode.gd" id="1_d8qkc"]

[sub_resource type="AtlasTexture" id="AtlasTexture_elhaw"]
atlas = ExtResource("1_1suy0")
region = Rect2(112, 56, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_e22wm"]
atlas = ExtResource("1_1suy0")
region = Rect2(96, 56, 8, 8)

[node name="CombatantNode" type="Node2D" groups=["CombatantNode"]]
script = ExtResource("1_d8qkc")

[node name="SelectCombatantBtn" type="TextureButton" parent="."]
custom_minimum_size = Vector2(8, 8)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -6.0
offset_top = -6.0
offset_right = 6.0
offset_bottom = 6.0
grow_horizontal = 2
grow_vertical = 2
texture_normal = SubResource("AtlasTexture_elhaw")
stretch_mode = 0

[node name="CombatantSprite" type="Sprite2D" parent="."]
texture = SubResource("AtlasTexture_e22wm")
